--- a/templates/login.html
+++ b/templates/login.html
@@ -13,51 +13,93 @@
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/static/css/videoUpload.css">
+ <link rel="stylesheet" href="/static/css/manage_cam.css">
+
+
+
+
+
 </head>
 
 <body>
-    <div id="msg" class="container my-4">
-        {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
+    
 
-        {% for category, message in messages %}
-        <div class="alert alert-primary alert-dismissible fade show" role="alert">
-            <strong>Message!</strong> {{ message | safe}}
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    <section>
+         
+        <div class="imgBx">
+            <img src="/static/img/login.jpg">
         </div>
-        {% endfor %}
-
-        {% endif %}
-        {% endwith %}
-    </div>
-
-    <div class="container">
-        <div class=" row justify-content-center">
-            <div class="col-sm-6 mt-4">
-                <h2>Login form</h2>
-                <form action="/login" method="POST">
-                    <div class="form-group">
-                        <label for="email">Email:</label>
-                        <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+        <div class="contentBx">
+                <div class="formBx">
+                    <div id="msg" class="container my-4">
+                        {% with messages = get_flashed_messages(with_categories=true) %}
+                        {% if messages %}
+                
+                        {% for category, message in messages %}
+                        <div class="alert alert-primary alert-dismissible fade show" role="alert">
+                            <strong>Message!</strong> {{ message | safe}}
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                        {% endfor %}
+                
+                        {% endif %}
+                        {% endwith %}
                     </div>
-                    <div class="form-group">
-                        <label for="pwd">Password:</label>
-                        <input type="password" class="form-control" id="pwd" placeholder="Enter password"
+                    <h2>Login</h2>
+                    <form action="/login" method="POST">
+                        <div class="inputBx">
+                            <label for="email"><span>Email</span></label>
+                            <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+                        </div>
+                        <div class="inputBx">
+                            <label for="pwd"><span>Password</span></label>
+                            <input type="password" class="form-control" id="pwd" placeholder="Enter password"
                             name="password">
-                    </div>
-
-                    <button type="submit" class="btn btn-dark">Submit</button>
-                    <a href="/register_page" class="btn btn-primary">Register</a>
-                </form>
-            </div>
-
+                        </div>
+                        <!-- <div class="remember">
+                            <label><input type="checkbox" name="">Remember Me</label>
+                        </div> -->
+                        <div class="inputBx">
+                            <input type="submit" value="Sign in" name="">
+                        </div>
+                        <div class="inputBx">
+                           <p>Don't have an account? <a href="register_page">Sign up</a></p>
+                        </div>
+                    </form>
+                </div> 
         </div>
+    </section>
 
-    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 </body>
 
 </html>
+
+
+
+
+
+<!-- 
+<div class="container">
+    <div class=" row justify-content-center">
+        <div class="col-sm-6 mt-4">
+            <h2>Login form</h2>
+            <form action="/login" method="POST">
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+                </div>
+                <div class="form-group">
+                    <label for="pwd">Password:</label>
+                    <input type="password" class="form-control" id="pwd" placeholder="Enter password"
+                        name="password">
+                </div>
+
+                <button type="submit" class="btn btn-dark">Submit</button>
+                <a href="/register_page" class="btn btn-primary">Register</a>
+            </form>
+        </div>
+    </div>
+</div> -->
