--- a/templates/register.html
+++ b/templates/register.html
@@ -13,25 +13,75 @@
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/static/css/videoUpload.css">
+   <link rel="stylesheet" href="/static/css/manage_cam.css">
+
+
+
+
+   
 </head>
 
 <body>
-    <div id="msg" class="container my-4">
-        {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
 
-        {% for category, message in messages %}
-        <div class="alert alert-primary alert-dismissible fade show" role="alert">
-            <strong>Message!</strong> {{ message | safe}}
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+
+
+    <section>
+        <div class="imgBx">
+            <img src="/static/img/signup.jpg">
         </div>
-        {% endfor %}
+        <div class="contentBx">
+                <div class="formBx">
+                    <div id="msg" class="container my-4">
+                        {% with messages = get_flashed_messages(with_categories=true) %}
+                        {% if messages %}
+                
+                        {% for category, message in messages %}
+                        <div class="alert alert-primary alert-dismissible fade show" role="alert">
+                            <strong>Message!</strong> {{ message | safe}}
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                        {% endfor %}
+                
+                        {% endif %}
+                        {% endwith %}
+                    </div>
+                    <h2>SignUp</h2>
+                    <form action="/register" method="POST">
+                        <div class="inputBx">
+                            <span>Username</span>
+                            <input type="text" class="form-control" id="name" placeholder="Enter Username" name="name">
+                            
+                        </div>
+                        <div class="inputBx">
+                            <label for="email"><span>Email</span></label>
+                            <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+                        </div>
+                        <div class="inputBx">
+                            <label for="pwd"><span>Password</span></label>
+                            <input type="password" class="form-control" id="pwd" placeholder="Enter password"
+                            name="password">
+                           
+                        </div>
+                        <!-- <div class="remember">
+                            <label><input type="checkbox" name="">Remember Me</label>
+                        </div> -->
+                        <div class="inputBx">
+                            <input type="submit" value="Submit" name="">
+                        </div>
+                        <div class="inputBx">
+                           <p>Already Signed in? <a href="login_page">Sign in</a></p>
+                        </div>
+                    </form>
+                </div> 
+        </div>
+    </section>
 
-        {% endif %}
-        {% endwith %}
-    </div>
 
+
+
+
+
+<!-- 
     <div class="container">
         <div class=" row justify-content-center">
             <div class="col-sm-6 mt-4">
@@ -59,10 +109,13 @@
             </div>
         </div>
 
-    </div>
+    </div> -->
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    
 
 </body>
 
