--- a/templates/index.html
+++ b/templates/index.html
@@ -69,88 +69,119 @@
 
   <main id="main">
 
+    
+    <section id="about" class="about">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-title">
+          <h2>About Us</h2>
+        </div>
+
+        <div class="row content">
+          <div class="col-lg-6">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore
+              magna aliqua.
+            </p>
+            <ul>
+              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
+              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
+              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
+            </ul>
+          </div>
+          <div class="col-lg-6 pt-4 pt-lg-0">
+            <p>
+              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+              voluptate
+              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+              culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+            <a href="#" class="btn-learn-more">Learn More</a>
+          </div>
+        </div>
+
+      </div>
+    </section>
 
 
-      <!--Form Part ended-->
+    <!-- ======= Services Section ======= -->
+    <section id="services" class="services section-bg">
+      <div class="container" data-aos="fade-up">
 
+        <div class="section-title">
+          <h2>Key Features</h2>
+          <p>Industrial workspace possesses risk to machinery and people. Our project aims to
+            reduce these risks by developing a web based application that leverages a cutting
+            edge solution to help establish a safer and secure industrial environment</p>
+        </div>
 
-      <!-- ======= Services Section ======= -->
-      <section id="services" class="services section-bg">
-        <div class="container" data-aos="fade-up">
-
-          <div class="section-title">
-            <h2>Key Features</h2>
-            <p>Industrial workspace possesses risk to machinery and people. Our project aims to
-              reduce these risks by developing a web based application that leverages a cutting
-              edge solution to help establish a safer and secure industrial environment</p>
+        <div class="row">
+          <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bxl-dribbble"></i></div>
+              <h4><a href="">Motion Amplification</a></h4>
+              <p>During equipment inspection, a video of the working
+                machine can be processed by this tool.</p>
+            </div>
           </div>
 
-          <div class="row">
-            <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-              <div class="icon-box">
-                <div class="icon"><i class="bx bxl-dribbble"></i></div>
-                <h4><a href="">Motion Amplification</a></h4>
-                <p>During equipment inspection, a video of the working
-                  machine can be processed by this tool.</p>
-              </div>
+          <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in"
+            data-aos-delay="200">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-file"></i></div>
+              <h4><a href="">Emergency Alert</a></h4>
+              <p>In case of an emergency, the person in the scene can reach
+                the nearest camera and wave to raise an alert.</p>
             </div>
+          </div>
 
-            <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in"
-              data-aos-delay="200">
-              <div class="icon-box">
-                <div class="icon"><i class="bx bx-file"></i></div>
-                <h4><a href="">Emergency Alert</a></h4>
-                <p>In case of an emergency, the person in the scene can reach
-                  the nearest camera and wave to raise an alert.</p>
-              </div>
+          <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in"
+            data-aos-delay="300">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-tachometer"></i></div>
+              <h4><a href=""> Restricted Zone</a></h4>
+              <p>Using the live feeds from CCTV cameras we can
+                raise alert if someone is found in restricted zone.</p>
             </div>
+          </div>
 
-            <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in"
-              data-aos-delay="300">
-              <div class="icon-box">
-                <div class="icon"><i class="bx bx-tachometer"></i></div>
-                <h4><a href=""> Restricted Zone</a></h4>
-                <p>Using the live feeds from CCTV cameras we can
-                  raise alert if someone is found in restricted zone.</p>
-              </div>
+          <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in"
+            data-aos-delay="400">
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-layer"></i></div>
+              <h4><a href="">Safety gear Detection</a></h4>
+              <p>It is very important to have a safe working
+                condition, and Safety Gear is most important for that</p>
             </div>
-
-            <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in"
-              data-aos-delay="400">
-              <div class="icon-box">
-                <div class="icon"><i class="bx bx-layer"></i></div>
-                <h4><a href="">Safety gear Detection</a></h4>
-                <p>It is very important to have a safe working
-                  condition, and Safety Gear is most important for that</p>
-              </div>
-            </div>
-
           </div>
 
         </div>
-      </section><!-- End Services Section -->
+
+      </div>
+    </section><!-- End Services Section -->
 
 
 
 
 
-      <!-- ======= Footer ======= -->
-      <footer id="footer">
+    <!-- ======= Footer ======= -->
+    <footer id="footer">
 
-        <div class="container footer-bottom clearfix">
-          <div class="copyright">
-            &copy; Copyright <strong><span>IndustryXpert</span></strong>
-          </div>
+      <div class="container footer-bottom clearfix">
+        <div class="copyright">
+          &copy; Copyright <strong><span>IndustryXpert</span></strong>
         </div>
-      </footer><!-- End Footer -->
+      </div>
+    </footer><!-- End Footer -->
 
-      <div id="preloader"></div>
-      <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
-          class="bi bi-arrow-up-short"></i></a>
+    <div id="preloader"></div>
+    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
+        class="bi bi-arrow-up-short"></i></a>
 
 
-      <!-- Template Main JS File -->
-      <script src="/static/js/main.js"></script>
+    <!-- Template Main JS File -->
+    <script src="/static/js/main.js"></script>
 
 </body>
 
